Updated to java 11